...
                    android:gravity="center_vertical|center_horizontal"
                    android:text="Comment goes here"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textColor="@color/black" />

                <!--<ImageView-->
                <!--android:id="@+id/sendButton"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="4"-->
                <!--android:padding="4dp"-->
                <!--android:src="@android:drawable/ic_menu_send" />-->
            </LinearLayout>
...
            android:layout_weight="0.00"
            android:elevation="11dp"
            app:border_color="#696969"
            app:border_width="2dp" />

        <EditText
            android:id="@+id/messageArea"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.98"
            android:hint="Leave your thoughts here..."
            android:maxHeight="80dp"
...
